# datadoggo-v3-rss

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  rss_links.yml
docs/: decision_checklist.md  design.md  milestone.md
migrations/: 202510130001_create_schema.sql  202510130002_create_queue_table.sql  202510130003_create_article_content_table.sql  20251013_002_create_queue_table.sql
mock/: google_news.rss
src/: api.rs  articles.rs  config.rs  db.rs  fetch_content.rs  fetch_rss.rs  main.rs  models.rs  test_support.rs  webhook.rs
