[package]
name = "datadoggo-v3-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"], default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2.0"
brotli = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.11"
once_cell = "1.19"
axum = "0.7"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
hyper = "1"
